// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIControlWrapper> renders a hidden label, invalid, and an error message 1`] = `
<label
  className="xui-field-layout"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <input
    aria-describedby="testGeneratedId-message"
    aria-invalid={true}
    aria-label="Impressive input label"
    aria-labelledby={undefined}
    type="text"
  />
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid"
    data-automationid={undefined}
    id="testGeneratedId-message"
    role="status"
  >
    oh no!
  </div>
</label>
`;

exports[`<XUIControlWrapper> renders a simple label, when provided 1`] = `
<label
  className="xui-field-layout"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <span
    className="xui-text-label xui-fieldlabel-layout"
    data-automationid={undefined}
    id="testGeneratedId"
  >
    Impressive input label
  </span>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-label={undefined}
    aria-labelledby="testGeneratedId"
    type="text"
  />
</label>
`;

exports[`<XUIControlWrapper> renders basic example 1`] = `
<label
  className="xui-field-layout"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-label={undefined}
    aria-labelledby={undefined}
    type="text"
  />
</label>
`;

exports[`<XUIControlWrapper> renders classes and qaHook on all elements 1`] = `
<label
  className="test-field-class xui-field-layout"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <span
    className="test-label-class xui-text-label xui-fieldlabel-layout"
    data-automationid="ctrl-wrapper--label"
    id="testSpecificLabel"
  >
    Small input label
  </span>
  <input
    aria-describedby="testSpecificLabel-message"
    aria-invalid={false}
    aria-label={undefined}
    aria-labelledby="testSpecificLabel"
    type="text"
  />
  <div
    className="xui-validation xui-validation-layout"
    data-automationid="ctrl-wrapper--message"
    id="testSpecificLabel-message"
    role="status"
  >
    I will give you a clue
  </div>
</label>
`;
